2023-11-02T00:57:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6726918739 # 2042
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-02
* notice: last 14d: unq all: 9 35
* notice: prev accum: outdated-unq outdated-all / unq all: 1334 3225 / 1363 3269
* notice: next accum: outdated-unq outdated-all / unq all: 1341 3235 / 1363 3270
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [2023-10-18] / [2023-11-01]

2023-11-01T16:16:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6722204074 # 2041
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-01
* notice: last 14d: unq all: 14 41
* notice: prev accum: outdated-unq outdated-all / unq all: 1334 3225 / 1361 3266
* notice: next accum: outdated-unq outdated-all / unq all: 1334 3225 / 1363 3269
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -1 -1 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2023-10-18 2023-11-01]

2023-11-01T08:16:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6717317219 # 2040
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-01
* notice: last 14d: unq all: 12 39
* notice: prev accum: outdated-unq outdated-all / unq all: 1334 3225 / 1360 3265
* notice: next accum: outdated-unq outdated-all / unq all: 1334 3225 / 1361 3266
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-18 2023-11-01]

2023-10-31T16:17:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6709399436 # 2038