@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-19T16:16:42Z",
-  "count" : 4,
-  "count_minmax" : [ 3, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2023-11-02T08:15:59Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 4 ],
+  "count_decinc" : [ -3, +4 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
