@@ -1,11 +1,11 @@
 {
-  "count": 35,
-  "uniques": 9,
+  "count": 33,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2023-10-19T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-10-20T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-11-01T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-11-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
