@@ -1,3 +1,12 @@
+2023-11-02T08:15:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6729928879 # 2043
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-02
+* notice: last 14d: unq all: 8 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 1341 3235 / 1363 3270
+* notice: next accum: outdated-unq outdated-all / unq all: 1341 3235 / 1364 3271
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -3 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-19 2023-11-02]
+
 2023-11-02T00:57:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6726918739 # 2042
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-02
